yamls/grafana_04_dev_ingress.yaml
---
# 6. An Ingress to expose the Service to the internet via an AWS ALB
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]' # Ensure ALB listens on 443
    alb.ingress.kubernetes.io/ssl-redirect: '443' # Optional: Redirect HTTP to HTTPS
    
    # monitoring.dev-app.mmh-global.com
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:806342426990:certificate/64abbaa0-0c8a-46fd-8f34-045cb7057e2f

    alb.ingress.kubernetes.io/proxy-read-timeout: "3600"
    alb.ingress.kubernetes.io/proxy-send-timeout: "3600"
    # alb.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: alb

  rules:
    - host: monitoring.dev-app.mmh-global.com # The hostname for the Ingress
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-svc
                port:
                  number: 3000
